--- a/libs/users/materials/feature-folders-list/src/lib/folders-list-container/folders-list-container.component.html
+++ b/libs/users/materials/feature-folders-list/src/lib/folders-list-container/folders-list-container.component.html
@@ -7,5 +7,6 @@
 >
   <folders-list-ui [vm]="vm" (deleteFolder)="onDeleteFolder($event)" (redirectToEdit)="onRedirectToEdit($event)" />
 </ng-container>
-<!-- <create-folders-button></create-folders-button> -->
+
+<create-folders-button></create-folders-button>
 
